# rustacean-world

./: .gitignore  Cargo.toml  LICENSE
adding_twice/: Cargo.toml
adding_twice/src/: lib.rs
banner/src/: lib.rs
bigger/src/: lib.rs
blood_types/: Cargo.toml
blood_types/src/: lib.rs
border_cross/src/: lib.rs
borrow_me_the_reference/src/: lib.rs
box_it/src/: lib.rs
capitalizing/src/: lib.rs
card_deck/src/: lib.rs
changes/src/: lib.rs
cipher/src/: lib.rs
circle/src/: lib.rs
closures/src/: lib.rs
collect/src/: lib.rs
commits_stats/src/: lib.rs
copy/src/: lib.rs
diamond_creation/src/: lib.rs
division_and_remainder/src/: lib.rs
does_it_fit/src/: lib.rs
drop_the_thread/: Cargo.toml
drop_the_thread/src/: lib.rs
easy_traits/src/: lib.rs  main.rs
edit_distance/src/: lib.rs
error_types/: Cargo.toml
error_types/src/: lib.rs
events/src/: lib.rs
expected_variable/: Cargo.toml
expected_variable/src/: lib.rs
fibonacci2/src/: lib.rs
generics/src/: lib.rs
get_products/src/: lib.rs
groceries/src/: lib.rs
handling/src/: lib.rs
hashing/src/: lib.rs
highest/src/: lib.rs
iterators/src/: lib.rs
lalgebra_scalar/src/: lib.rs
lalgebra_vector/src/: lib.rs
lifetimes/src/: lib.rs
logic_number/src/: lib.rs
looping/src/: main.rs
macro_calculator/: Cargo.toml
macro_calculator/src/: lib.rs
matrix/src/: lib.rs
matrix_mult/src/: lib.rs
matrix_ops/src/: lib.rs
matrix_transposition/src/: lib.rs
middle_day/src/: lib.rs
next-prime/: Cargo.toml
syctale_cipher/: Cargo.toml
vector_operations/: Cargo.toml
(+38 files in other folders)
