[workspace]
members = [
    "scalar",
    ".",
    "temperature_conv", "speed_transformation", "looping",
]

[package]
name = "piscine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
scalar = { path = "scalar" }
temperature_conv = { path = "temperature_conv"}
speed_transformation = { path = "speed_transformation"}
looping = { path = "looping"}
